# bulletin-board-example

./: .gitignore  Makefile  README.md
contracts/: .gitignore  Makefile  README.md  rustfmt.toml
contracts/bulletin_board/: Cargo.toml  addresses.json  lib.rs  rust-toolchain
contracts/highlighted_posts/: Cargo.toml  lib.rs  rust-toolchain  rustfmt.toml
frontend/: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/AnotherNavBarPage/: AnotherNavBarPage.tsx  index.tsx
frontend/src/components/BulletinBoard/: BulletinBoard.tsx  index.tsx
frontend/src/components/BulletinBoard/HighlightsList/: HighlightsList.tsx  index.tsx
frontend/src/components/BulletinBoard/HighlightsList/HighlightsRow/: HighlightsRow.tsx  index.tsx
frontend/src/components/BulletinBoard/PostDetailsPopup/: PostDetailsPopup.tsx  index.tsx
frontend/src/components/Footer/: Footer.tsx
frontend/src/components/HamburgerMenuIcon/: HamburgerMenuIcon.tsx  index.tsx
frontend/src/components/HeroHeading/: HeroHeading.tsx  index.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/components/Navbar/: Navbar.tsx
frontend/src/components/NotificationToast/: NotificationToast.tsx  index.tsx
frontend/src/components/NotificationToast/ToastMessage/: ToastMessage.tsx
frontend/src/components/NotificationToast/ToastMessage/ProgressCircle/: ProgressCircle.tsx
frontend/src/components/Post/: Post.tsx
frontend/src/components/PostPage/: PostPage.tsx
frontend/src/components/SectionHeader/: SectionHeader.tsx
frontend/src/components/ThemeProvider/: ThemeProvider.tsx
frontend/src/components/Wallet/AccountSelector/: AccountSelector.tsx
frontend/src/components/Wallet/WalletButton/: WalletButton.tsx  index.tsx
frontend/src/components/WelcomePopup/: WelcomePopup.tsx  index.tsx
frontend/src/metadata/: addresses.json  bulletins_metadata.json  highlights_metadata.json  metadata_bulletin_board.json  metadata_highlighted_posts.json
frontend/src/redux/: localStorage.ts  store.tsx
frontend/src/redux/slices/: postsSlice.tsx  walletAccountsSlice.tsx  welcomePopupSlice.tsx
frontend/src/shared/: layout.ts
frontend/src/shared/constants/: index.ts
frontend/src/utils/: checkIfAddressIsValid.ts  deletePost.ts  dryRun.ts  formatChainStringToNumber.ts  getDataFromOutput.ts  getHighlightPricePerBlock.ts  getHighlightedPostsAuthors.ts  getPostByAccount.ts  getPostsAuthors.ts  getWalletAddressShort.ts  sendPost.ts  sleep.ts
scripts/: _deploy.sh  addresses.json  deploy.sh  deploy_local.sh  deploy_testnet.sh  update_contract_addresses.sh  update_contract_metadata.sh
scripts/env/: local  testnet
