[package]
name = "bulletin_board"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]

ink = { version = "4.2.0", default-features = false }

# Following dependncies provide third-party tools (UIs, other clients) with information about how to decode
# contract types, agnostic of language.
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

highlighted_posts = { path = "../highlighted_posts", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "bulletin_board"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "highlighted_posts/std"
]
ink-as-dependency = []

# # TODO: Document the followings
# [profile.dev]
# codegen-units = 16
# lto = true
# 
# # Number of optimization passes, passed as an argument to `wasm-opt`.
# # For more information see the output of `cargo contract build --help`.
# [package.metadata.contract]
# optimization-passes = "z"
