[package]
name = "bulletin_board"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]

ink = { version = "=4.2.1", default-features = false }

# Following dependncies provide third-party tools (UIs, other clients) with information about how to decode
# contract types, agnostic of language.
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

highlighted_posts = { path = "../highlighted_posts", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "bulletin_board"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "highlighted_posts/std"
]
ink-as-dependency = []

